# Hieroflow

./: .gitignore  README.md  pyproject.toml
hieroflow/: __init__.py
hieroflow/configs/: base.yaml
hieroflow/environment/: __init__.py  lean_env.py  obligation.py  proof_state.py
hieroflow/evaluation/: __init__.py  benchmarks.py  diversity_metrics.py  proof_embedder.py
hieroflow/sketch/: __init__.py  sketch_dag.py  sketch_encoder.py  sketch_gfn.py  sketch_reward.py
hieroflow/tactic/: __init__.py  tactic_gfn.py  tactic_policy.py  tactic_reward.py
hieroflow/training/: __init__.py  curriculum.py  joint_trainer.py  replay_buffer.py  trajectory_balance.py
results/: generate_all.py  plot_style.py
results/data/: loader.py  schema.py
results/figures/: fig1_main_result.py  fig2_diversity.py  fig3_sketch_ablation.py  fig4_efficiency.py  fig5_qualitative.py  fig6_appendix.py  fig7_training_curves.py  fig8_per_benchmark.py  fig9_diversity_scatter.py
results/stats/: effect_size.py  significance.py
results/tables/: table1_main.py  table2_ablation.py  table3_diversity.py
