[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hieroflow"
version = "0.1.0"
description = "Hierarchical GFlowNet for Lean 4 Theorem Proving"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
full = [
    "torch_geometric",
    "sentence_transformers",
    "lean_dojo",
    "transformers",
    "tqdm",
    "wandb",
    "scikit-learn",
    "datasets",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hieroflow*"]
